force-app/main/default/objects/Quality_Search_Object__mdt/Quality_Search_Object__mdt.object-meta.xml
<CustomObject>
    <description>An object to be queried by Quality Search (e.g. Contact for B2B, Account for Person Accounts). Child of Config, parent of Field.</description>
    <label>Quality Search Object</label>
    <pluralLabel>Quality Search Objects</pluralLabel>
</CustomObject>