force-app/main/default/objects/Quality_Search_Object__mdt/fields/Config__c.field-meta.xml
<CustomField>
    <fullName>Config__c</fullName>
    <description>Parent configuration this object belongs to.</description>
    <label>Config</label>
    <referenceTo>Quality_Search_Config__mdt</referenceTo>
    <relationshipLabel>Objects</relationshipLabel>
    <relationshipName>Objects</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>