force-app/main/default/objects/Quality_Search_Object__mdt/fields/Display_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Type_Label__c</fullName>
    <description>Label shown on each matched record card (e.g. "Business Contact", "Person Account", "Lead").</description>
    <label>Display Type Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>