force-app/main/default/objects/Quality_Search_Object__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>SObject API name to query (e.g. Contact, Account, Lead, Customer__c). Whitelist-validated at runtime via Schema describe.</description>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>