force-app/main/default/objects/Quality_Search_Object__mdt/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <description>Controls the static record-scope filter applied to the query. B2B_Contact adds IsPersonAccount = FALSE; Person_Account adds IsPersonAccount = TRUE; Standard adds nothing (use for Lead, custom objects, etc.).</description>
    <label>Variant</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B_Contact</fullName>
                <label>B2B Contact</label>
            </value>
            <value>
                <fullName>Person_Account</fullName>
                <label>Person Account</label>
            </value>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>